--- a/pom.xml
+++ b/pom.xml
@@ -198,7 +198,7 @@
 		<repository>
 			<id>localLibs</id>
 			<name>localLibs</name>
-			<url>file://${basedir}/repository</url>
+			<url>file://${basedir}/../repository</url>
 			<!-- https://stackoverflow.com/questions/2229757/maven-add-a-dependency-to-a-jar-by-relative-path -->
 		</repository>
 	</repositories>
