--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,12 @@
 			<artifactId>org.eclipse.jdt.core</artifactId>
 			<version>3.15.0</version>
 		</dependency>
+		<!-- https://github.com/javaparser/javaparser -->
+		<dependency>
+			<groupId>com.github.javaparser</groupId>
+			<artifactId>javaparser-core</artifactId>
+			<version>3.13.0</version>
+		</dependency>
 		<dependency>
 			<groupId>org.jetbrains.kotlin</groupId>
 			<artifactId>kotlin-stdlib-jdk8</artifactId>
@@ -80,7 +86,7 @@
 		</dependency>
 		<dependency>
 			<groupId>org.jetbrains.kotlin</groupId>
-			<artifactId>kotlin-test</artifactId>
+			<artifactId>kotlin-test-junit</artifactId>
 			<version>${kotlin.version}</version>
 			<scope>test</scope>
 		</dependency>
