--- a/pom.xml
+++ b/pom.xml
@@ -110,7 +110,7 @@
 								<!-- add Main-Class to manifest file -->
 								<transformer
 									implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-									<mainClass>CryptoDemoMain</mainClass>
+									<mainClass>languageserver.CryptoDemoMain</mainClass>
 								</transformer>
 							</transformers>
 							<filters>
