--- a/pom.xml
+++ b/pom.xml
@@ -43,13 +43,18 @@
 		<dependency>
 			<groupId>de.upb</groupId>
 			<artifactId>Soot</artifactId>
-			<version>4.0.0-SNAPSHOT</version>
+			<version>4.0.0.3</version>
+		</dependency>
+		<dependency>
+			<groupId>magpiebridge</groupId>
+			<artifactId>magpiebridge</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
 		<!-- CrytoAnalysis -->
 		<dependency>
 			<groupId>de.fraunhofer.iem</groupId>
 			<artifactId>CryptoAnalysis</artifactId>
-			<version>2.1-SNAPSHOT</version>
+			<version>2.2.Pathtracking.-SNAPSHOT</version>
 			<exclusions>
 				<exclusion>
 					<groupId>org.eclipse.core</groupId>
